--- a/mango.yaml
+++ b/mango.yaml
@@ -17,7 +17,7 @@ static:
   - src/fonts/**
   - src/data/manifest.json
 templates:
-  - src/templates/*.jade
+  - src/templates/*.pug
 buildstamp:
   - dist/styles/*.css
   - dist/scripts/App.js
