--- a/mango.yaml
+++ b/mango.yaml
@@ -23,16 +23,16 @@ buildstamp:
   - dist/scripts/App.js
 dependencies:
   - normalize-scss
-  - bourbon
-  - material-ui
-  - react-tap-event-plugin
-  - react
-  - react-dom
-  - redux
-  - react-redux
-  - react-router@^3.0.2
-  - react-router-dom
-  - react-router-redux@^4.0.8
+  - bourbon@4.3.4
+  - material-ui@0.17.1
+  - react-tap-event-plugin@2.0.1
+  - react@15.4.2
+  - react-dom@15.4.2
+  - redux@3.6.0
+  - react-redux@5.0.3
+  - react-router@3.0.3
+  - react-router-dom@4.0.0
+  - react-router-redux@4.0.8
 data:
   manifest: src/data/manifest.json
 hooks:
